👥 Complete User Management System with Authentication
✅ MAJOR FEATURE: User Management & Authentication
- Complete user authentication system with JWT tokens
- Role-based access control (Admin, Manager, User)
- Comprehensive permission system for all features
- Secure password hashing with bcrypt
- Account lockout protection after failed attempts

🔐 Authentication Features:
- JWT-based authentication with 7-day expiration
- Secure login/logout functionality
- Password strength requirements (min 6 characters)
- Account lockout after 5 failed attempts (2 hours)
- First user automatically becomes admin
- Login page with registration for first user

👤 User Model & Permissions:
- Comprehensive user schema with all necessary fields
- Role-based permissions for every system feature
- Granular permissions: view/add/edit/delete for each module
- User status management (active/inactive/locked)
- Login attempt tracking and security measures
- Created by tracking for audit purposes

🛠️ User Management Interface:
- Complete user management page with CRUD operations
- User statistics dashboard (total, active, by role, locked)
- Advanced filtering (search, role, status)
- User creation with role assignment
- User editing with permission management
- Password reset functionality (admin only)
- Account unlock functionality (admin only)
- User deletion with safety checks

🎨 UI/UX Features:
- Beautiful login page with gradient background
- Role badges with icons (Crown for admin, Shield for manager)
- Status indicators (active/inactive/locked)
- Responsive design for all screen sizes
- Form validation and error handling
- Loading states and success/error notifications
- Modal dialogs for create/edit operations

🔒 Security Features:
- Password hashing with bcrypt (cost 12)
- JWT token validation middleware
- Permission-based route protection
- Role-based access control
- Account lockout after failed attempts
- Secure password reset (admin only)
- Input validation and sanitization

📊 Us

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "install:all": "npm install && cd frontend && npm install && cd ../server && npm install",
     "backend": "cd server && npm run dev",
     "frontend": "cd frontend && npm run dev"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
