🚀 Fix Vercel Deployment Configuration
✅ Fixed Issues:
- Updated vercel.json with proper build configuration for monorepo
- Fixed package.json build scripts for Vercel compatibility
- Added production environment handling in server
- Updated CORS configuration for production domains
- Enhanced Next.js config for production API routing
- Added missing dependencies to server package.json
- Updated mobile app to use production URL

🔧 Technical Changes:
- Proper Vercel builds for both frontend (Next.js) and backend (Node.js)
- Environment-aware API routing (dev vs production)
- Production-ready CORS settings
- Mobile app now uses Vercel domain by default
- Enhanced error handling and logging

📱 Mobile App Updates:
- Updated API base URL to use production Vercel domain
- Fallback to local development when needed
- Environment variable support for flexible deployment

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "echo 'Choose: npm run backend (port 8080) or npm run frontend (port 3000)'",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd server && npm run dev",
-    "build": "cd frontend && npm run build",
+    "build": "cd frontend && npm install && npm run build",
     "start": "cd server && npm start",
     "install:all": "npm install && cd frontend && npm install && cd ../server && npm install",
     "backend": "cd server && npm run dev",
-    "frontend": "cd frontend && npm run dev"
+    "frontend": "cd frontend && npm run dev",
+    "vercel-build": "cd frontend && npm install && npm run build"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
