--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "dev": "echo 'Choose: npm run backend (port 8080) or npm run frontend (port 3000)'",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd server && npm run dev",
-    "build": "cd frontend && npm install && npm run build",
-    "start": "cd server && npm start",
+    "build": "cd frontend && npm run build",
+    "start": "cd frontend && npm start",
     "install:all": "npm install && cd frontend && npm install && cd ../server && npm install",
     "backend": "cd server && npm run dev",
     "frontend": "cd frontend && npm run dev",
-    "vercel-build": "cd frontend && npm install && npm run build"
+    "vercel-build": "cd frontend && npm run build"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
+    "csv-parser": "^3.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "@shopify/shopify-api": "^8.1.1",
+    "node-fetch": "^2.7.0"
   }
 }
