🔧 Simplify Vercel Configuration - Frontend Only Deployment
✅ New Approach:
- Simplified vercel.json to focus on Next.js frontend deployment
- Updated Next.js config to handle production API routing
- Removed complex monorepo configuration
- Added http-proxy-middleware dependency for API routing
- Configured environment variables for backend URL

🔧 Technical Changes:
- Using @vercel/next build for frontend
- Simple routing configuration
- Production API calls will proxy to external backend
- Development still uses local backend proxy

📦 Dependencies:
- Added http-proxy-middleware for API routing
- Updated Next.js configuration for production deployment

🎯 Strategy:
- Deploy frontend to Vercel as standalone Next.js app
- Backend can be deployed separately (Railway, Render, etc.)
- Mobile app will connect to production frontend domain

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,15 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && npm install",
-  "devCommand": "cd frontend && npm run dev",
-  "functions": {
-    "server/index.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "/server/index.js"
+      "src": "frontend/next.config.js",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/$1"
     }
   ]
 }
