--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@zxing/library": "^0.21.3",
     "axios": "^1.6.2",
+    "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18",
