🚀 Convert to Vercel API Routes - Fix Production Backend
✅ Major Changes:
- Created Vercel API routes for authentication and products
- Added MongoDB connection utility for serverless functions
- Updated Next.js config to use built-in API routes
- Added required dependencies (mongodb, bcryptjs, jsonwebtoken)

🔧 Technical Details:
- /pages/api/auth/login.js - JWT authentication
- /pages/api/products/index.js - Product CRUD operations
- /lib/mongodb.js - Database connection utility
- Updated package.json with backend dependencies

🚀 Benefits:
- No external backend needed
- All in one Vercel deployment
- Serverless functions for API endpoints
- Fixes CORS and mixed content issues

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@zxing/library": "^0.21.3",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "http-proxy-middleware": "^2.0.6",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
+    "mongodb": "^6.3.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
