CRITICAL FIX: Remove custom Vercel routing that breaks dynamic API routes
- Removed custom routes configuration from vercel.json
- Let Next.js handle dynamic routing natively
- This should fix the 404 errors on /api/products/[id]

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/next.config.js",
+      "src": "frontend/package.json",
       "use": "@vercel/next"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
     }
   ]
 }
