CRITICAL FIX: Simplify Vercel routing to fix API endpoints
- Removed complex API routing that was causing 404/405 errors
- Simplified vercel.json to let Next.js handle all routing natively
- Should fix login API and all other API endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -3,20 +3,10 @@
   "builds": [
     {
       "src": "frontend/package.json",
-      "use": "@vercel/next",
-      "config": {
-        "distDir": ".next"
-      }
+      "use": "@vercel/next"
     }
   ],
   "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/frontend/pages/api/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "/frontend/$1"
