--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@zxing/library": "^0.21.3",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "csv-parser": "^3.2.0",
+    "formidable": "^3.5.4",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
