--- a/inventory_barcode_scanner/pubspec.yaml
+++ b/inventory_barcode_scanner/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   
   # Haptic feedback
   vibration: ^2.1.0
+  
+  # Audio for beep sounds
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -73,9 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
